<resources>
    <string name="app_name">VAT app</string>
    <string name="total_price">Enter a total price</string>
    <string name="select_vat_percentage">Select VAT percentage:</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="round_up_total">Round up total</string>
    <string name="calculate_vat">Calculate VAT</string>
    <string name="total_amount">Vat Amount: %s</string>
</resources>