<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/light_purple"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/total_price"
        android:inputType="numberDecimal"
        android:backgroundTint="@color/dark_purple">

    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_vat_percentage"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="16dp"
        android:textColor="@color/dark_purple"
        android:fontFamily="serif">

    </TextView>
<RadioGroup
    android:id="@+id/rgVat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/rbVat10"
        android:text="@string/_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif">

    </RadioButton>
    <RadioButton
        android:id="@+id/rbVat15"
        android:text="@string/_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif">

    </RadioButton>
    <RadioButton
        android:id="@+id/rbVat20"
        android:text="@string/_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif">

    </RadioButton>

</RadioGroup>

<Switch
    android:id="@+id/switch_round_up"
    android:text="@string/round_up_total"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:textColor="@color/dark_purple"
    android:fontFamily="serif"
    android:textStyle="bold">

</Switch>

    <Button
        android:id="@+id/btCalcVAT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_vat"
        android:backgroundTint="@color/purple_200"
        android:layout_marginBottom="10dp">

    </Button>

    <TextView
        android:id="@+id/txt_cost_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        tools:text="@string/app_name"
        android:textColor="#9C27B0"
        android:fontFamily="serif"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/vat_remove"
        android:layout_gravity="center">
    </ImageView>
</LinearLayout>
